--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,8 @@
     "class-methods-use-this": "off",
     "import/no-named-as-default": "off",
     "import/no-named-as-default-member": "off",
-    "jsx-a11y/anchor-is-valid": "off"
+    "jsx-a11y/anchor-is-valid": "off",
+    "jsx-a11y/href-no-hash": "off"
   },
   "env": {
     "browser": true
