--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,9 @@
     "import/no-named-as-default": "off",
     "import/no-named-as-default-member": "off",
     "jsx-a11y/anchor-is-valid": "off",
-    "jsx-a11y/href-no-hash": "off"
+    "jsx-a11y/href-no-hash": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-static-element-interactions": "off"
   },
   "env": {
     "browser": true
